2008-09-18  Néstor Salceda  <nestor.salceda@gmail.com>

	* DeclareEventHandlersCorrectlyRule.cs: New.  Rule that check
	conventions when you are writting events.
	* Gendarme.Rules.Design.mdp: Updated MD project file.
	* Makefile.am: Added rule and test to the build.

2008-08-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersRule.cs: Add the attributes for the two 
	fxcop rules that match this one.
	* OperatorEqualsShouldBeOverloadedRule.cs: This does not apply to
	delegates.

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementGenericCollectionInterfacesRule.cs: Moving to Design.Generic
	* Makefile.am, Gendarme.Rules.Design.mdp: Remove rule from build files.

2008-08-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsRule.cs, 
	AvoidEmptyInterfaceRule.cs, AvoidPropertiesWithoutGetAccessorRule.cs,
	DisposableTypesShouldHaveFinalizerRule.cs,
	DontDeclareProtectedFieldsInSealedClassRule.cs, 
	EnumsShouldDefineAZeroValueRule.cs, FinalizersShouldBeProtectedRule.cs,
	FinalizersShouldCallBaseClassFinalizerRule.cs, 
	FlagsShouldNotDefineAZeroValueRule.cs, 
	MissingAttributeUsageOnCustomAttributeRule.cs, 
	OverrideEqualsMethodRule.cs, TypesShouldBeInsideNamespacesRule.cs,
	UsingCloneWithoutImplementingICloneableRule.cs: Use shorter override.

2008-08-06  Peter Johanson  <peter@peterjohanson.com>

	* AvoidPublicInstanceFieldsRule.cs: Make the rule not apply
	to private or internal nested types.

2008-08-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingFieldToNullableRule.cs: Don't duplicate FX check
	in both Initialize and CheckType (removed).
	* ImplementGenericCollectionInterfacesRule.cs: Move FX check into
	the Initialize method - this will make it faster for 1.x assemblies.

2008-07-23  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* ConsiderUsingStaticTypeRule.cs: Fix the rule in order to avoid false
	positives with empty clases and inheritance.
